# sqlite-dylib

./: CMakeLists.txt  README.md  sqlite3.c
.github/workflows/: build_dylib.yml
